<resources>
    <string name="app_name">Trash Classification</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nim">191110035</string>
    <string name="deep_learning">Deep Learning</string>
    <string name="quick_easy_classification"><![CDATA[Quick & Easy Classification]]></string>
    <string name="reuse_reduce_recycle">Reuse, Reduce, Recycle</string>
    <string name="right_button">right button</string>
    <string name="ilustration">ilustration</string>
    <string name="save_the_earth">Save the environment starting \nfrom your own action</string>
    <string name="garbage_classification">Garbage Classification</string>
    <string name="garbage_pic">garbage pic</string>
    <string name="camera">Camera</string>
    <string name="images">Images</string>
    <string name="galeri">galeri</string>
    <string name="result">View Result</string>

    <string name="organik_title">Sampah Organik</string>
    <string name="desc_organik">Sampah organik adalah sampah yang berasal dari sisa makhluk hidup dan
        benda hasil olahannya yang dapat mengalami pembusukan atau pelapukan.
    </string>

    <string name="anorganik_title">Sampah Anorganik</string>
    <string name="desc_anorganik">sampah organik adalah sampah yang berasal dari bahan-bahan non organik/non hayati.
    </string>



</resources>