<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.home.HomeFragment">

    <ImageView
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@id/tittle"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ilustration_writing"
        android:contentDescription="@string/ilustration" />

    <TextView
        android:id="@+id/tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/voltaire"
        android:text="@string/quick_easy_classification"
        android:textSize="@dimen/_20ssp"
        android:textColor="@color/color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="serif-monospace"
        android:text="@string/reuse_reduce_recycle"
        app:layout_constraintEnd_toEndOf="@id/tittle"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@id/tittle"
        app:layout_constraintTop_toBottomOf="@id/tittle" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/onClick_classifyMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_80sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/subtittle"
        app:layout_constraintEnd_toEndOf="@id/subtittle"
        android:src="@drawable/ic_nav_right"
        android:contentDescription="@string/right_button" />


</androidx.constraintlayout.widget.ConstraintLayout>